tools border remove

--- a/components/programs/program-tools-section.module.css
+++ b/components/programs/program-tools-section.module.css
@@ -63,7 +63,7 @@
     bottom: 2px;
     width: 100%;
     height: 12px;
-    background-color: #00d285;
+    background-color: #ff6b00;
     /* Greenish teal from reference */
     z-index: -1;
     opacity: 0.3;
